# realtime-server

./: .gitignore  .gitmodules  .~lock.game_server_engine_ppt.pptx#  CMakeLists.txt  LICENSE  README.md  game_server_engine_ppt.pptx  init.sh
ActionServer/: ActionServerPCH.cpp  ActionServerPCH.h  ActionServerShared.h  CMakeLists.txt  Character.cpp  CharacterServer.cpp  ClientProxy.cpp  ClientProxy.h  GameObject.cpp  GameObjectRegistry.cpp  GameObjectRegistry.h  Macro.h  MemoryBitStream.cpp  MemoryBitStream.h  Move.h  NetworkManager.cpp  NetworkManager.h  NetworkManagerServer.cpp  NetworkManagerServer.h  Server.cpp  Server.h  ServerMain.cpp  SocketAddress.h  Timing.cpp  UDPSocket.cpp  UDPSocket.h  World.cpp
ActionServer/ActionServer/: AckRange.cpp  Action.cpp  Action.h  ActionServerMath.cpp  ActionServerMath.h  ActionServerShared.h  BitStream.cpp  BitStream.h  Character.cpp  Character.h  CharacterServer.cpp  CharacterServer.h  ClientProxy.cpp  ClientProxy.h  DeliveryNotificationManager.cpp  DeliveryNotificationMgr.h  Entity.cpp  GameObject.cpp  GameObject.h  InFlightPacket.cpp  InputState.cpp  InputState.h  LeapNoPI.h  Matrix3x3.h  Matrix3x3.hpp  MemoryBitStream.cpp  Move.cpp  MoveList.cpp  MoveList.h  NetworkManager.cpp  NetworkManager.h  NetworkManagerServer.cpp  NetworkManagerServer.h  NetworkMgr.h  NetworkMgrSrv.cpp  NetworkMgrSrv.h  Quaternion.h  Quaternion.hpp  RealTimeServer.h  RealTimeServerPCH.h  (+26 more)
RealTimeServer/RealTimeServer/: .gitignore  AckBitField.cpp  AckBitField.h  AckRange.cpp  AckRange.h  Action.cpp  ActionList.cpp  BitStream.cpp  BitStream.h  CMakeLists.txt  Character.cpp  Character.h  CharacterServer.cpp  CharacterSrv.h  ClientProxy.cpp  ClientProxy.h  DeliveryNotificationMgr.cpp  DeliveryNotifyMgr.cpp  DeliveryNotifyMgr.h  Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  EpollInterface.cpp  EpollInterface.h  InFlightPacket.cpp  InFlightPacket.h  InputState.cpp  Macro.h  NetworkMgr.cpp  NetworkMgr.h  NetworkMgrSrv.cpp  NetworkMgrSrv.h  PacketSN.cpp  PacketSN.h  RealTimeServer.cpp  RealTimeServer.h  RealTimeServerPCH.h  RealTimeSrv.cpp  RealTimeSrv.h  (+23 more)
RealTimeServer/RealTimeServer/game/: Action.cpp  BitStream.h  Character.cpp  Character.h  CharacterSrv.cpp  ClientProxy.cpp  ClientProxy.h  DeliveryNotifyMgr.cpp  Entity.cpp  Entity.h  EntityFactory.cpp  EpollInterface.h  InputState.cpp  InputState.h  Macro.h  Matrix3x3.h  NetworkMgr.cpp  NetworkMgr.h  NetworkMgrSrv.cpp  NetworkMgrSrv.h  RealTimeSrv.cpp  RealTimeSrv.h  RealTimeSrvMath.cpp  RealTimeSrvMath.h  RealTimeSrvShared.h  RealTimeSrvTiming.cpp  ReplicationCmd.h  ReplicationMgr.cpp  TransmissionDataHandler.cpp  UDPSocketInterface.cpp  UDPSocketInterface.h  Vector2.h  WeightedTimedMovingAverage.h  World.cpp  World.h
RealTimeServer/RealTimeServer/net/: CMakeLists.txt  UdpAcceptor.cpp  UdpAcceptor.h  UdpCallbacks.h  UdpClient.cpp  UdpClient.h  UdpConnection.cpp  UdpConnection.h  UdpConnector.cpp  UdpConnector.h  UdpServer.cpp  UdpServer.h  UdpSocketsOps.cpp  rts.cpp
example/for_ue4_demo/: CMakeLists.txt  Character.cpp  Character.h  Character.lua  Character.pkg  CharacterLuaBind.cpp  CharacterLuaBind.h  ClientProxy.cpp  ClientProxy.h  EntityFactory.cpp  EntityFactory.h  ExampleInputState.h  ExampleRedisCli.cpp  ExampleRedisCli.h  ExampleSrvForUe4Demo.cpp  ExampleSrvForUe4Demo.h  ExampleSrvForUe4DemoPlus.cpp  ExampleSrvForUe4DemoWithRedis.cpp  LuaWrapper.cpp  LuaWrapper.h  NetworkMgrSrv.cpp  NetworkMgrSrv.h  README.md  RealTimeSrv.cpp  RealTimeSrv.h  Robot.h  ServerMain.cpp  World.cpp  World.h  for_ue4_demo_shared.h
lib/kcp_annotated/: Buf.h  CMakeLists.txt  KcpSession.h  PortableEndian.h  README.md  RandGen.h  TestKcpSession.cpp  TestKcpSessionClient.cpp  TestKcpSessionServer.cpp  ikcp.c  ikcp.h  test.cpp  test.h
muduo/: CMakeLists.txt
muduo/net/: Channel.h  EventLoop.h
muduo/net/poller/: DefaultPoller.cc
muduo_udp_support/: CMakeLists.txt  UdpClient.cpp  UdpConnection.cpp  UdpServer.cpp
realtime_server/: CMakeLists.txt
realtime_server/common/: RealTimeSrvHelper.cpp  RealTimeSrvHelper.h  RealTimeSrvShared.h
realtime_server/example/: CharacterSrv.h  Entity.h  InputState.h  NetworkMgr.cpp  NetworkMgr.h  RealTimeSrv.h
realtime_server/linux_net/: CMakeLists.txt  UdpAcceptor.cpp  UdpClient.cpp  UdpConnection.h  UdpConnector.cpp  UdpServer.h  UdpSocketsOps.cpp  UdpSocketsOps.h
realtime_server/math/: Quaternion.h  Vector3.h
realtime_server/rudp/: AckBitField.h  BitStream.cpp  DeliveryNotifyMgr.h  InFlightPacket.cpp
realtime_server/win_mac_net/: SocketAddrInterface.h  UDPSocketInterface.h
realtime_srv/: CMakeLists.txt  RealtimeServer.cpp  RealtimeServer.h  rs_config.ini
realtime_srv/common/: Buf.h  LuaBindMgr.h  Macro.h  RealTimeSrvHelper.cpp  RealTimeSrvHelper.h  RealTimeSrvShared.h  RealTimeSrvTiming.cpp  RealTimeSrvTiming.h  RealtimeSrvHelper.cpp  RealtimeSrvMacro.h  RealtimeSrvSharedMin.h  RealtimeSrvTiming.cpp  any.h  noncopyable.h
realtime_srv/entity/: Action.cpp  ActionList.cpp  Entity.cpp  Entity.h  InputState.cpp  InputState.h
realtime_srv/gameObj/: Action.cpp  Action.h  ActionList.cpp  ActionList.h  GameObj.cpp  GameObj.h  InputState.cpp  InputState.h  World.cpp  World.h
realtime_srv/game_obj/: Action.cpp  Action.h  ActionList.cpp  ActionList.h  GameObj.cpp  GameObj.h  InputState.cpp  InputState.h  World.cpp  World.h
realtime_srv/math/: Matrix3x3.h  Quaternion.h  RealTimeSrvMath.cpp  RealTimeSrvMath.h  RealtimeSrvMath.cpp  RealtimeSrvMath.h  Vector2.h  Vector3.cpp  Vector3.h
realtime_srv/net/: ClientProxy.cpp  ClientProxy.h  NetworkMgr.cpp  NetworkMgr.h  NetworkMgrWinH.h  NetworkMgrWinS.h  Packet.h  PktDispatcher.cpp  PktDispatcher.h  PktHandler.cpp  PktHandler.h  SockAddrInterf.h  SockAddrInterfc.h  UDPSocketInterface.cpp  UdpSockInterf.cpp  UdpSockInterf.h  UdpSockInterfc.cpp  UdpSockInterfc.h
realtime_srv/rep/: AckBitField.cpp  AckBitField.h  BitStream.cpp  BitStream.h  DeliveryNotifyMgr.cpp  DeliveryNotifyMgr.h  InFlightPacket.cpp  InFlightPacket.h  InflightPacket.cpp  InflightPacket.h  ReplicationCmd.h  ReplicationMgr.cpp  ReplicationMgr.h
(+617 files in other folders)
